prepravljeno u englesku verziju

--- a/index.html
+++ b/index.html
@@ -10,37 +10,37 @@
 <body>
     <h1>Track My Calories</h1>
     <div class="input-flex">
-    <input type="text" id="unosKalorija" placeholder="Unesi kalorije" autocomplete="off" autofocus>
-    <button id="snimi" class="snimi">Sačuvaj</button>
-    <button id="obrisi" class="obrisi">Obriši</button>
+    <input type="text" id="unosKalorija" placeholder="Enter calories" autocomplete="off" autofocus>
+    <button id="snimi" class="snimi">Save</button>
+    <button id="obrisi" class="obrisi">Delete</button>
 </div>
     <table>
 <tr>
-    <th id="ponHead">Ponedeljak</th>
+    <th id="ponHead">Monday</th>
     <td id="poljePon">0</td>
 </tr>
 <tr>
-    <th id="utoHead">Utorak</th>
+    <th id="utoHead">Tuesday</th>
     <td id="poljeUto">0</td>
 </tr>
 <tr>
-    <th id="sreHead">Sreda</th>
+    <th id="sreHead">Wednesday</th>
     <td id="poljeSre">0</td>
 </tr>
 <tr>
-    <th id="cetHead">Četvrtak</th>
+    <th id="cetHead">Thursday</th>
     <td id="poljeCet">0</td>
 </tr>
 <tr>
-    <th id="petHead">Petak</th>
+    <th id="petHead">Friday</th>
     <td id="poljePet">0</td>
 </tr>
 <tr>
-    <th id="subHead">Subota</th>
+    <th id="subHead">Saturday</th>
     <td id="poljeSub">0</td>
 </tr>
 <tr>
-    <th id="nedHead">Nedelja</th>
+    <th id="nedHead">Sunday</th>
     <td id="poljeNed">0</td>
 </tr>
     </table>
